Fixed input:text width overflowing outside the container on low width screen

--- a/src/app/Contact/components/ContactUsForm.scss
+++ b/src/app/Contact/components/ContactUsForm.scss
@@ -185,6 +185,12 @@
             .cont-form-element {
                 display: flex;
                 padding: 0 0.5rem;
+
+                input {
+                    padding: 0;
+                    width: 100%;
+                    padding-left: 1rem;
+                }
             }
 
             .cfe-last {
